Corrected the full flow for batchwise and nonbatchwise exams
